scripts/terraform/instance.tf
data "template_file" "user_data" {
  template = "${file("user-data.tpl")}"
}

resource "aws_instance" "node" {
  count                       = "${var.node_count}"
  ami                         = "${data.aws_ami.base.id}"
  instance_type               = "${var.node_instance_type}"
  key_name                    = "${var.key_name}"
  associate_public_ip_address = false
  source_dest_check           = false
  vpc_security_group_ids      = ["${aws_security_group.kubernetes.id}"]
  subnet_id                   = "${element(aws_subnet.private.*.id, count.index % length(aws_subnet.private.*.id))}"
  iam_instance_profile        = "${aws_iam_instance_profile.node.id}"
  ebs_optimized               = true
  user_data                   = "${data.template_file.user_data.rendered}"

  lifecycle {
     ignore_changes = [ "user_data", "instance_type" ]
  }

  root_block_device {
    delete_on_termination = true
    volume_type           = "io1"
    volume_size           = "50"
    iops                  = 500
  }

  ebs_block_device = {
    delete_on_termination = true
    volume_type           = "io1"
    volume_size           = "500"
    device_name           = "/dev/xvdb"
    iops                  = 1500
  }

  tags {
    KubernetesCluster = "${var.cluster_name}"
   }
}

resource "aws_iam_instance_profile" "node" {
  name       = "node-${var.cluster_name}"
  role       = "${aws_iam_role.master.name}"
  depends_on = ["aws_iam_role_policy.master"]
  provisioner "local-exec" {
    command = "sleep 30"
  }
}
