scripts/terraform/security_group.tf
resource "aws_security_group" "kubernetes" {
  name   = "${var.cluster_name}"
  vpc_id = "${local.vpc_id}"
  tags   = "${merge(local.common_tags, map())}"
}

resource "aws_security_group_rule" "ingress_allow_ssh" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = "${aws_security_group.kubernetes.id}"
}

resource "aws_security_group_rule" "ingress_allow_internal_traffic" {
  type              = "ingress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  self              = true
  security_group_id = "${aws_security_group.kubernetes.id}"
}

resource "aws_security_group_rule" "egress_allow_all_traffic" {
  type              = "egress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = "${aws_security_group.kubernetes.id}"
}
